// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View nested TOC entries 1`] = `
<div
  className="table-of-contents variation-id"
>
  <div>
    Renderer Component
  </div>
</div>
`;

exports[`View renders Table of content message when in edit mode with no title and no tocEntries and does not render custom Renderer 1`] = `
<div
  className="table-of-contents"
>
  <div
    className="ui message"
  >
    Table of content
  </div>
  <div>
    View extension not found
  </div>
</div>
`;

exports[`View renders Table of content message when in edit mode with no title and no tocEntries and renders custom Renderer 1`] = `
<div
  className="table-of-contents variation-id"
>
  <div
    className="ui message"
  >
    Table of content
  </div>
  <div>
    Renderer Component
  </div>
</div>
`;

exports[`View renders Table of content message when in edit mode with no title and tocEntries and renders custom Renderer 1`] = `
<div
  className="table-of-contents"
>
  <div>
    View extension not found
  </div>
</div>
`;

exports[`View there are no blocks with the given id in layout 1`] = `
<div
  className="table-of-contents"
>
  <div
    className="ui message"
  >
    Table of content
  </div>
  <div>
    View extension not found
  </div>
</div>
`;

exports[`View undefined type 1`] = `
<div
  className="table-of-contents"
>
  <div
    className="ui message"
  >
    Table of content
  </div>
  <div>
    View extension not found
  </div>
</div>
`;
